--- a/templates/test/dev/custom-builds-load/kustomization.yaml
+++ b/templates/test/dev/custom-builds-load/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: default
 resources:
 - ../custom-builds
+patches:
+- path: patches/kcp-scheduler.yaml
 generatorOptions:
   annotations:
     note: generated
