Add back storageclass and azuredisk

--- a/templates/test/dev/custom-builds-load/kustomization.yaml
+++ b/templates/test/dev/custom-builds-load/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 namespace: default
 resources:
 - ../custom-builds
+- storageclass-resource-set.yaml
 patches:
+- path: patches/cluster-label-storageclass.yaml
+- path: patches/cluster-label-azuredisk.yaml
 - path: patches/kcp-scheduler.yaml
 generatorOptions:
   annotations:
