--- a/templates/test/dev/cluster-template-custom-builds-load.yaml
+++ b/templates/test/dev/cluster-template-custom-builds-load.yaml
@@ -2,12 +2,14 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   labels:
+    azuredisk-csi: "true"
     cloud-provider: ${CLOUD_PROVIDER_AZURE_LABEL:=azure}
     cni: calico
     cni-windows: ${CLUSTER_NAME}-calico
     containerd-logger: enabled
     csi-proxy: enabled
     metrics-server: enabled
+    storageclass: "true"
   name: ${CLUSTER_NAME}
   namespace: default
 spec:
@@ -1354,3 +1356,17 @@ metadata:
     type: generated
   name: metrics-server-${CLUSTER_NAME}
   namespace: default
+---
+apiVersion: addons.cluster.x-k8s.io/v1beta1
+kind: ClusterResourceSet
+metadata:
+  name: ${CLUSTER_NAME}-storageclass
+  namespace: default
+spec:
+  clusterSelector:
+    matchLabels:
+      storageclass: "true"
+  resources:
+  - kind: ConfigMap
+    name: cni-${CLUSTER_NAME}-storageclass
+  strategy: ApplyOnce
