--- a/templates/test/dev/cluster-template-custom-builds-load.yaml
+++ b/templates/test/dev/cluster-template-custom-builds-load.yaml
@@ -1370,3 +1370,57 @@ spec:
   - kind: ConfigMap
     name: cni-${CLUSTER_NAME}-storageclass
   strategy: ApplyOnce
+---
+apiVersion: v1
+data:
+  storageclass: |
+    apiVersion: storage.k8s.io/v1
+    kind: StorageClass
+    metadata:
+      name: default
+      annotations:
+        storageclass.beta.kubernetes.io/is-default-class: "true"
+      labels:
+        kubernetes.io/cluster-service: "true"
+    provisioner: kubernetes.io/azure-disk
+    parameters:
+      kind: Managed
+      storageaccounttype: Standard_LRS
+      cachingmode: ReadOnly
+    volumeBindingMode: WaitForFirstConsumer
+    ---
+    apiVersion: storage.k8s.io/v1
+    kind: StorageClass
+    metadata:
+      name: managed-premium
+      annotations:
+      labels:
+        kubernetes.io/cluster-service: "true"
+    provisioner: kubernetes.io/azure-disk
+    parameters:
+      kind: Managed
+      storageaccounttype: Premium_LRS
+      cachingmode: ReadOnly
+    volumeBindingMode: WaitForFirstConsumer
+    ---
+    apiVersion: storage.k8s.io/v1
+    kind: StorageClass
+    metadata:
+      name: managed-standard
+      annotations:
+      labels:
+        kubernetes.io/cluster-service: "true"
+    provisioner: kubernetes.io/azure-disk
+    parameters:
+      kind: Managed
+      storageaccounttype: Standard_LRS
+      cachingmode: ReadOnly
+    volumeBindingMode: WaitForFirstConsumer
+kind: ConfigMap
+metadata:
+  annotations:
+    note: generated
+  labels:
+    type: generated
+  name: storageclass-${CLUSTER_NAME}
+  namespace: default
