--- a/templates/test/dev/custom-builds-load/kustomization.yaml
+++ b/templates/test/dev/custom-builds-load/kustomization.yaml
@@ -14,6 +14,9 @@ generatorOptions:
   disableNameSuffixHash: true
   labels:
     type: generated
-
+configMapGenerator:
+- files:
+  - storageclass=../../../addons/storageclass-azure-disk.yaml
+  name: storageclass-${CLUSTER_NAME}
 sortOptions:
   order: fifo
