--- a/templates/test/dev/cluster-template-custom-builds-load.yaml
+++ b/templates/test/dev/cluster-template-custom-builds-load.yaml
@@ -1368,7 +1368,7 @@ spec:
       storageclass: "true"
   resources:
   - kind: ConfigMap
-    name: cni-${CLUSTER_NAME}-storageclass
+    name: ${CLUSTER_NAME}-storageclass
   strategy: ApplyOnce
 ---
 apiVersion: v1
