Fix other config map name bug

--- a/templates/test/dev/cluster-template-custom-builds-load.yaml
+++ b/templates/test/dev/cluster-template-custom-builds-load.yaml
@@ -1422,5 +1422,5 @@ metadata:
     note: generated
   labels:
     type: generated
-  name: storageclass-${CLUSTER_NAME}
+  name: ${CLUSTER_NAME}-storageclass
   namespace: default
